Added all the topic pages

--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -86,9 +86,9 @@
           </div>
           <div class="game-tags">
             <div class="game-btn"><a href="../games/wordsearch/WordSearch.html?type=copyright" class="button-container">WordSearch</a></div>
-            <div class="game-btn"><a href="../games/crossword/crossword.html" class="button-container">Crossword</a></div>
-            <div class="game-btn"><a href="../games/quiz/quiz.html" class="button-container">Quiz</a></div>
-            <div class="game-btn"><a href="../games/quiz/quiz.html" class="button-container">Video</a></div>
+            <div class="game-btn"><a href="../games/crossword/crossword.html?type=copyright" class="button-container">Crossword</a></div>
+            <div class="game-btn"><a href="../games/quiz/quiz.html?type=copyright" class="button-container">Quiz</a></div>
+            <div class="game-btn"><a href="/src/games/Story/copyright-story.html" class="button-container">Video</a></div>
           </div>
       </div>
         <div class="card">
