--- a/src/tradesecret/tradesecret.html
+++ b/src/tradesecret/tradesecret.html
@@ -5,75 +5,106 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="tradesecret.css" rel="stylesheet" />
-  <title>Trade secret</title>
+  <link href="/src/navbar/navbar-style.css" rel="stylesheet" />
+  <title>Copyright</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="navbar">
-      <img src="../../images/patent_logo2.jpeg" class="logo" />
-      <nav>
-        <a href="../homepage/homepage.html" style="text-decoration: none">
-          <h2><span>IPowerUp</span></h2>
-        </a>
-        <ul>
-          <li><a href="../homepage/homepage.html">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-
-          <li><a href="#">Categories</a></li>
-        </ul>
-        <a class="btn" href="../../index.html" style="color: aliceblue">Sign Out</a>
-      </nav>
-      <img src="../../images/menu.png" class="menu-icon" />
-    </div>
-    <div class="row">
-      <div class="col col1">
-        <h1 class="ip-title">Trade Secret</h1>
-        <p class="ip-desc">
-          A trade secret is any practice or process of a company that is
-          generally not known outside of the company. Information considered a
-          trade secret gives the company a competitive advantage over its
-          competitors and is often a product of internal research and
-          development. Trade secrets are secret practices and processes that
-          give a company a competitive advantage over its competitors. Trade
-          secrets may differ across jurisdictions but have three common
-          traits: not being public, offering some economic benefit, and being
-          actively protected.
-        </p>
-        &nbsp;
-        <p class="ip-desc">
-          Trade secrets may take a variety of forms, such as a proprietary
-          process, instrument, pattern, design, formula, recipe, method, or
-          practice that is not evident to others and may be used as a means to
-          create an enterprise that offers an advantage over competitors or
-          provides value to customers. As confidential information (as trade
-          secrets are known in some jurisdictions), trade secrets are the
-          "classified documents" of the business world, just as top-secret
-          documents are closely guarded by government agencies. There are many
-          examples of trade secrets that are tangible and intangible. For
-          example, Google's search algorithm exists as intellectual property
-          in code and is regularly uThe secret formula for Coca-Cola, which is
-          locked in a vault, is an example of a trade secret that is a formula
-          or recipe. Since it has not been patented, it has never been
-          revealed.
-        </p>
-        <a href="../games/wordsearch/WordSearch.html?type=tradesecret">
-          <button type="button">WordSearch</button>
-        </a>
-        <a href="../games/quiz/quiz.html?type=tradesecret">
-          <button type="button">Tradesecret Quiz</button>
-        </a>
+    <header>
+    <nav class="navbar">
+      <h2><span>IPowerUp</span></h2>
+      <div class="nav-links">
+        <a href="/src/homepage/homepage.html" class="home">Home</a>
+        <div class="dropdown">
+          <a class="dropbtn">Categories</a>
+          <div class="dropdown-content">
+            <a href="../patent/patent.html">Patent</a>
+            <a href="../copyright/copyright.html">Copyright</a>
+            <a href="../trademark/trademark.html">Trademarks</a>
+            <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a class="dropbtn">Games</a>
+          <div class="dropdown-content">
+            <div class="dropdown-submenu">
+              <a class="subdropbtn">Quiz ▸</a>
+              <div class="submenu-content">
+                <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
+              </div>
+            </div>
+            <div class="dropdown-submenu">
+              <a class="subdropbtn">Wordsearch ▸</a>
+              <div class="submenu-content">
+                <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+              </div>
+            </div>
+            <div class="dropdown-submenu">
+              <a class="subdropbtn">Crossword ▸</a>
+              <div class="submenu-content">
+                <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
+              </div>
+            </div>
+            <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+          </div>
+        </div>
       </div>
-      <div class="col">
+      <div class="nav-buttons">
+        <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
+        <a class="btn" href="../../index.html">Sign Out</a>
+        <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
+      </div>
+    </nav>
+  </header>
+  <div class="container">
+  &nbsp;
+    <div class="blur">
+      <div class="col col1">
+        <h1 class="ip-title"><span>Copyright</span></h1>
+        <div class="cont">
+          <div class="sliding-facts">
+            <span class="nav-arrow" id="prev">&lt;</span>
+            <div class="facts-container">
+            <p id="facts" class="ip-desc">
+              Copyright is a legal right that grants creators exclusive rights to reproduce, use, and duplicate their
+              original work for a set period. This protection applies to works created independently and in tangible
+              form, known as Original Works of Authorship (OWA). However, copyright does not cover ideas, concepts,
+              theories, or certain items like brand names and logos. Once a copyright expires, the work enters the
+              public domain.
+            </p>
+            </div>
+            <span class="nav-arrow" id="next">&gt;</span>
+          </div>
+          <div class="game-tags">
+            <div class="game-btn"><a href="../games/wordsearch/WordSearch.html?type=tradesecret" class="button-container">WordSearch</a></div>
+            <div class="game-btn"><a href="../games/crossword/crossword.html?type=tradesecret" class="button-container">Crossword</a></div>
+            <div class="game-btn"><a href="../games/quiz/quiz.html?type=tradesecret" class="button-container">Quiz</a></div>
+            <div class="game-btn"><a href="/src/games/Story/TradeSceret-Story.html" class="button-container">Video</a></div>
+          </div>
+      </div>
         <div class="card">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/0TeB59XZbIc?si=l1zbr-JkDMmahJSL"
+          <iframe width="560" height="355" src="https://www.youtube.com/embed/eEB5MYcj-Ns?si=qOE8pxjuFLRJFeyq"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         </div>
       </div>
     </div>
-  </div>
+  <!-- <div class="game-tags">
+    <div><a href="../games/wordsearch/WordSearch.html?type=copyright" class="button-container">WordSearch</a></div>
+    <div><a href="../games/crossword/crossword.html" class="button-container">Crossword</a></div>
+    <div><a href="../games/quiz/quiz.html" class="button-container">Quiz</a></div>
+  </div> -->
+  <script src="tradesecret.js"></script>
 </body>
 
 </html>
