--- a/src/games/Story/Patent-Story.html
+++ b/src/games/Story/Patent-Story.html
@@ -18,10 +18,10 @@
         <div class="dropdown">
           <a class="dropbtn">Categories</a>
           <div class="dropdown-content">
-            <a href="../patent/patent.html">Patent</a>
-            <a href="../copyright/copyright.html">Copyright</a>
-            <a href="../trademark/trademark.html">Trademarks</a>
-            <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
+            <a href="/src/patent/patent.html">Patent</a>
+            <a href="/src/copyright/copyright.html">Copyright</a>
+            <a href="/src/trademark/trademark.html">Trademarks</a>
+            <a href="/src/tradesecret/tradesecret.html">Trade Secrets</a>
           </div>
         </div>
         <div class="dropdown">
@@ -30,31 +30,31 @@
             <div class="dropdown-submenu">
               <a class="subdropbtn">Quiz ▸</a>
               <div class="submenu-content">
-                <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
-                <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
-                <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
-                <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
+                <a href="/src/games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                <a href="/src/games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                <a href="/src/games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                <a href="/src/games/quiz/quiz.html?type=patent">Patent Quiz</a>
               </div>
             </div>
             <div class="dropdown-submenu">
               <a class="subdropbtn">Wordsearch ▸</a>
               <div class="submenu-content">
-                <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
-                <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
-                <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
-                <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+                <a href="/src/games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                <a href="/src/games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                <a href="/src/games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                <a href="/src/games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
               </div>
             </div>
             <div class="dropdown-submenu">
               <a class="subdropbtn">Crossword ▸</a>
               <div class="submenu-content">
-                <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
-                <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
-                <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
-                <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
+                <a href="/src/games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                <a href="/src/games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                <a href="/src/games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                <a href="/src/games/crossword/crossword.html?type=patent">Patent Crossword</a>
               </div>
             </div>
-            <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+            <a href="/src/games/logoquiz/logoGame.html">Guess the Logo</a>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
     </div>
     <div class="button-container">
       <button class="previous">
-        <a href="../../patent/patent.html">Previous</a>
+        <a href="../../patent/patent.html">Back</a>
       </button>
     </div>
     </div>
