--- a/src/games/Story/copyright-story.html
+++ b/src/games/Story/copyright-story.html
@@ -76,7 +76,7 @@
     </div>
     <div class="button-container">
       <button class="previous">
-        <a href="../copyright/copyright.html">Back</a>
+        <a href="../../copyright/copyright.html">Back</a>
       </button>
     </div>
     </div>
