--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -72,8 +72,7 @@
         <div class="col col1">
           <h1 class="ip-title"><span>Intellectual Property</span></h1>
           <p class="ip-desc">
-            Intellectual property is a category of property that includes intangible creations of the human intellect.
-            The best-known types are patents, copyrights, trademarks, and trade secrets.
+            Intellectual properties (IP) are legal rights protecting creations of the mind, like inventions, designs, and artistic works. These rights allow creators to control their use and earn recognition or financial benefits. IP includes patents, trademarks, copyrights, and trade secrets to encourage innovation and protect creative interests.
           </p>
         </div>
       </div>
