--- a/src/trademark/trademark.html
+++ b/src/trademark/trademark.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="trademark.css" rel="stylesheet" />
   <link href="/src/navbar/navbar-style.css" rel="stylesheet" />
-  <title>Copyright</title>
+  <title>Trademark</title>
 </head>
 
 <body>
@@ -75,11 +75,7 @@
             <span class="nav-arrow" id="prev">&lt;</span>
             <div class="facts-container">
             <p id="facts" class="ip-desc">
-              Copyright is a legal right that grants creators exclusive rights to reproduce, use, and duplicate their
-              original work for a set period. This protection applies to works created independently and in tangible
-              form, known as Original Works of Authorship (OWA). However, copyright does not cover ideas, concepts,
-              theories, or certain items like brand names and logos. Once a copyright expires, the work enters the
-              public domain.
+              A Trademark is a recognizable sign, logo, word, or phrase that distinguishes the goods or services of one entity from others. It symbolizes quality and brand identity, allowing consumers to identify the source of products. Protected by law, trademarks grant exclusive rights to their owners and prevent others from using similar marks. This protection fosters consumer trust and promotes fair competition in the marketplace.
             </p>
             </div>
             <span class="nav-arrow" id="next">&gt;</span>
