--- a/src/copyright/copyright.html
+++ b/src/copyright/copyright.html
@@ -88,7 +88,7 @@
             <div class="game-btn"><a href="../games/wordsearch/WordSearch.html?type=copyright" class="button-container">WordSearch</a></div>
             <div class="game-btn"><a href="../games/crossword/crossword.html?type=copyright" class="button-container">Crossword</a></div>
             <div class="game-btn"><a href="../games/quiz/quiz.html?type=copyright" class="button-container">Quiz</a></div>
-            <div class="game-btn"><a href="/src/games/Story/copyright-story.html" class="button-container">Video</a></div>
+            <div class="game-btn"><a href="../games/Story/copyright-story.html" class="button-container">Video</a></div>
           </div>
       </div>
         <div class="card">
