--- a/src/patent/patent.html
+++ b/src/patent/patent.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="patent.css" rel="stylesheet" />
   <link href="/src/navbar/navbar-style.css" rel="stylesheet" />
-  <title>Copyright</title>
+  <title>Patent</title>
 </head>
 
 <body>
@@ -75,11 +75,7 @@
             <span class="nav-arrow" id="prev">&lt;</span>
             <div class="facts-container">
             <p id="facts" class="ip-desc">
-              Copyright is a legal right that grants creators exclusive rights to reproduce, use, and duplicate their
-              original work for a set period. This protection applies to works created independently and in tangible
-              form, known as Original Works of Authorship (OWA). However, copyright does not cover ideas, concepts,
-              theories, or certain items like brand names and logos. Once a copyright expires, the work enters the
-              public domain.
+              A Patent is a legal right granted by a government to an inventor, giving them exclusive rights to their invention for a specified period, typically 20 years. This protection prevents others from making, using, or selling the invention without the inventor's permission. Patents encourage innovation by allowing inventors to profit from their creations. To be patentable, an invention must be novel, non-obvious, and useful.
             </p>
             </div>
             <span class="nav-arrow" id="next">&gt;</span>
