--- a/src/tradesecret/tradesecret.html
+++ b/src/tradesecret/tradesecret.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="tradesecret.css" rel="stylesheet" />
   <link href="/src/navbar/navbar-style.css" rel="stylesheet" />
-  <title>Copyright</title>
+  <title>TradeSecret</title>
 </head>
 
 <body>
@@ -69,17 +69,13 @@
   &nbsp;
     <div class="blur">
       <div class="col col1">
-        <h1 class="ip-title"><span>Copyright</span></h1>
+        <h1 class="ip-title"><span>TradeSecret</span></h1>
         <div class="cont">
           <div class="sliding-facts">
             <span class="nav-arrow" id="prev">&lt;</span>
             <div class="facts-container">
             <p id="facts" class="ip-desc">
-              Copyright is a legal right that grants creators exclusive rights to reproduce, use, and duplicate their
-              original work for a set period. This protection applies to works created independently and in tangible
-              form, known as Original Works of Authorship (OWA). However, copyright does not cover ideas, concepts,
-              theories, or certain items like brand names and logos. Once a copyright expires, the work enters the
-              public domain.
+              A Trade Secret is any confidential business information that provides a competitive advantage, such as formulas, practices, processes, designs, or customer lists. Unlike patents, trade secrets are not registered and remain protected as long as they are kept confidential and provide economic value. Legal protection against trade secret theft typically involves nondisclosure agreements.
             </p>
             </div>
             <span class="nav-arrow" id="next">&gt;</span>
