--- a/src/games/logoquiz/logoGame.html
+++ b/src/games/logoquiz/logoGame.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,62 +7,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Logo Quiz Game</title>
     <link rel="stylesheet" href="logoGame.css" />
-    <link rel="stylesheet" href="../../navbar/navbar-style.css" </head>
+    <link rel="stylesheet" href="/src/navbar/navbar-style.css" />
+</head>
 
 <body>
     <header>
         <nav class="navbar">
-            <h2><span>IPowerUp</span></h2>
+            <h2 class="navbar-h2"><span>IPowerUp</span></h2>
             <div class="nav-links">
                 <a href="/src/homepage/homepage.html" class="home">Home</a>
                 <div class="dropdown">
-                    <a class="dropbtn">Categories</a>
+                    <button class="dropbtn">Categories</button>
                     <div class="dropdown-content">
-                        <a href="../patent/patent.html">Patent</a>
-                        <a href="../copyright/copyright.html">Copyright</a>
-                        <a href="../trademark/trademark.html">Trademarks</a>
-                        <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
+                        <a href="../../patent/patent.html">Patent</a>
+                        <a href="../../copyright/copyright.html">Copyright</a>
+                        <a href="../../trademark/trademark.html">Trademarks</a>
+                        <a href="../../tradesecret/tradesecret.html">Trade Secrets</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <a class="dropbtn">Games</a>
+                    <button class="dropbtn">Games</button>
                     <div class="dropdown-content">
                         <div class="dropdown-submenu">
-                            <a class="subdropbtn">Quiz ▸</a>
+                            <button class="subdropbtn">Quiz ▸</button>
                             <div class="submenu-content">
-                                <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
-                                <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
-                                <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
-                                <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
+                                <a href="../quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                                <a href="../quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                                <a href="../quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                                <a href="../quiz/quiz.html?type=patent">Patent Quiz</a>
                             </div>
                         </div>
                         <div class="dropdown-submenu">
-                            <a class="subdropbtn">Wordsearch ▸</a>
+                            <button class="subdropbtn">Wordsearch ▸</button>
                             <div class="submenu-content">
-                                <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
-                                <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
-                                <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret
-                                    Wordsearch</a>
-                                <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                                <a href="../wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
                             </div>
                         </div>
                         <div class="dropdown-submenu">
-                            <a class="subdropbtn">Crossword ▸</a>
+                            <button class="subdropbtn">Crossword ▸</button>
                             <div class="submenu-content">
-                                <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
-                                <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
-                                <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
-                                <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
+                                <a href="../crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                                <a href="../crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                                <a href="../crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                                <a href="../crossword/crossword.html?type=patent">Patent Crossword</a>
                             </div>
                         </div>
-                        <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+                        <a href="../logoquiz/logoGame.html">Guess the Logo</a>
                     </div>
                 </div>
             </div>
-            <div class="nav-buttons">
-                <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
-                <a class="btn" href="../../index.html">Sign Out</a>
-                <a class="profile-pic" href="/src/profile/profile.html"><img src="/images/profile-pic.png"></a>
+            <a class="btn1" href="../../scoreboard/scoreboard.html">Leaderboard</a>
+            <a class="btn" href="../../../index.html">Sign Out</a>
             </div>
         </nav>
     </header>
@@ -72,21 +71,20 @@
             <div class="col" id="questionBox">
             </div>
             <div class="col box">
-                <input type="radio" name="answer" id="optionA" value="a" required />
+                <input type="radio" name="answer" id="optionA" required />
                 <img src="" alt="Option A" id="imgOptionA" />
-                <input type="radio" name="answer" id="optionB" value="b" required />
+                <input type="radio" name="answer" id="optionB" required />
                 <img src="" alt="Option B" id="imgOptionB" />
             </div>
             <button id="submit">Submit</button>
-            <div class="loading" id="loading">Loading...</div>
         </div>
     </section>
-    <a href="../../homepage/homepage.html">
+    <a href="../../trademark/trademark.html">
         <button class="b">
             <h1>Exit</h1>
         </button>
     </a>
-    <script type="module" src="logoGame.js"></script>
+    <script src="logoGame.js"></script>
 </body>
 
 </html>
