--- a/src/profile/profile.html
+++ b/src/profile/profile.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="/src/navbar/navbar-style.css">
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <title>Profile Page - Ultimate Edition</title>
 </head>
@@ -12,57 +14,59 @@
 <body>
     <header>
         <nav class="navbar">
-            <h2><span>IPowerUp</span></h2>
-            <div class="nav-links">
-                <a href="../homepage/homepage.html" class="home">Home</a>
-                <div class="dropdown">
-                    <button class="dropbtn">Categories</button>
-                    <div class="dropdown-content">
-                        <a href="../patent/patent.html">Patent</a>
-                        <a href="../copyright/copyright.html">Copyright</a>
-                        <a href="../trademark/trademark.html">Trademarks</a>
-                        <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Games</button>
-                    <div class="dropdown-content">
-                        <div class="dropdown-submenu">
-                            <button class="subdropbtn">Quiz ▸</button>
-                            <div class="submenu-content">
-                                <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
-                                <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
-                                <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
-                                <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
-                            </div>
-                        </div>
-                        <div class="dropdown-submenu">
-                            <button class="subdropbtn">Wordsearch ▸</button>
-                            <div class="submenu-content">
-                                <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
-                                <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
-                                <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret
-                                    Wordsearch</a>
-                                <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
-                            </div>
-                        </div>
-                        <div class="dropdown-submenu">
-                            <button class="subdropbtn">Crossword ▸</button>
-                            <div class="submenu-content">
-                                <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
-                                <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
-                                <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
-                                <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
-                            </div>
-                        </div>
-                        <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
-                    </div>
-                </div>
-                <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
-                <a class="btn" href="../../index.html">Sign Out</a>
+          <h2><span>IPowerUp</span></h2>
+          <div class="nav-links">
+            <a href="/src/homepage/homepage.html" class="home">Home</a>
+            <div class="dropdown">
+              <a class="dropbtn">Categories</a>
+              <div class="dropdown-content">
+                <a href="../patent/patent.html">Patent</a>
+                <a href="../copyright/copyright.html">Copyright</a>
+                <a href="../trademark/trademark.html">Trademarks</a>
+                <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
+              </div>
             </div>
+            <div class="dropdown">
+              <a class="dropbtn">Games</a>
+              <div class="dropdown-content">
+                <div class="dropdown-submenu">
+                  <a class="subdropbtn">Quiz ▸</a>
+                  <div class="submenu-content">
+                    <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                    <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                    <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                    <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
+                  </div>
+                </div>
+                <div class="dropdown-submenu">
+                  <a class="subdropbtn">Wordsearch ▸</a>
+                  <div class="submenu-content">
+                    <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                    <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                    <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                    <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+                  </div>
+                </div>
+                <div class="dropdown-submenu">
+                  <a class="subdropbtn">Crossword ▸</a>
+                  <div class="submenu-content">
+                    <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                    <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                    <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                    <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
+                  </div>
+                </div>
+                <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+              </div>
+            </div>
+          </div>
+          <div class="nav-buttons">
+            <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
+            <a class="btn" href="../../index.html">Sign Out</a>
+            <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
+          </div>
         </nav>
-    </header>
+      </header>
     <main class="container">
         <div class="profile-header">
             <img class="avatar" src="../../images/Avatar.png" alt="Avatar of Username" aria-label="User Avatar">
