--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -19,10 +19,10 @@
           <div class="dropdown">
             <a class="dropbtn">Categories</a>
             <div class="dropdown-content">
-              <a href="../patent/patent.html">Patent</a>
-              <a href="../copyright/copyright.html">Copyright</a>
-              <a href="../trademark/trademark.html">Trademarks</a>
-              <a href="../tradesecret/tradesecret.html">Trade Secrets</a>
+              <a href="/src/patent/patent.html">Patent</a>
+              <a href="/src/copyright/copyright.html">Copyright</a>
+              <a href="/src/trademark/trademark.html">Trademarks</a>
+              <a href="/src/tradesecret/tradesecret.html">Trade Secrets</a>
             </div>
           </div>
           <div class="dropdown">
@@ -31,37 +31,37 @@
               <div class="dropdown-submenu">
                 <a class="subdropbtn">Quiz ▸</a>
                 <div class="submenu-content">
-                  <a href="../games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
-                  <a href="../games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
-                  <a href="../games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
-                  <a href="../games/quiz/quiz.html?type=patent">Patent Quiz</a>
+                  <a href="/src/games/quiz/quiz.html?type=trademark">Trademark Quiz</a>
+                  <a href="/src/games/quiz/quiz.html?type=copyright">Copyright Quiz</a>
+                  <a href="/src/games/quiz/quiz.html?type=tradesecret">Trade Secret Quiz</a>
+                  <a href="/src/games/quiz/quiz.html?type=patent">Patent Quiz</a>
                 </div>
               </div>
               <div class="dropdown-submenu">
                 <a class="subdropbtn">Wordsearch ▸</a>
                 <div class="submenu-content">
-                  <a href="../games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
-                  <a href="../games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
-                  <a href="../games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
-                  <a href="../games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
+                  <a href="/src/games/wordsearch/WordSearch.html?type=trademark">Trademark Wordsearch</a>
+                  <a href="/src/games/wordsearch/WordSearch.html?type=copyright">Copyright Wordsearch</a>
+                  <a href="/src/games/wordsearch/WordSearch.html?type=tradesecret">Trade Secret Wordsearch</a>
+                  <a href="/src/games/wordsearch/WordSearch.html?type=patent">Patent Wordsearch</a>
                 </div>
               </div>
               <div class="dropdown-submenu">
                 <a class="subdropbtn">Crossword ▸</a>
                 <div class="submenu-content">
-                  <a href="../games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
-                  <a href="../games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
-                  <a href="../games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
-                  <a href="../games/crossword/crossword.html?type=patent">Patent Crossword</a>
+                  <a href="/src/games/crossword/crossword.html?type=trademark">Trademark Crossword</a>
+                  <a href="/src/games/crossword/crossword.html?type=copyright">Copyright Crossword</a>
+                  <a href="/src/games/crossword/crossword.html?type=tradesecret">Trade Secret Crossword</a>
+                  <a href="/src/games/crossword/crossword.html?type=patent">Patent Crossword</a>
                 </div>
               </div>
-              <a href="../games/logoquiz/logoGame.html">Guess the Logo</a>
+              <a href="/src/games/logoquiz/logoGame.html">Guess the Logo</a>
             </div>
           </div>
         </div>
         <div class="nav-buttons">
-          <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
-          <a class="btn" href="../../index.html">Sign Out</a>
+          <a class="btn1" href="/src/scoreboard/scoreboard.html">Leaderboard</a>
+          <a class="btn" href="/index.html">Sign Out</a>
           <a class="profile-pic" href="/src/profile/profile.html"><img src="/images/profile-pic.png"></a>
         </div>
       </nav>
