--- a/src/games/Story/copyright-story.html
+++ b/src/games/Story/copyright-story.html
@@ -59,9 +59,9 @@
         </div>
       </div>
       <div class="nav-buttons">
-        <a class="btn1" href="../scoreboard/scoreboard.html">Leaderboard</a>
-        <a class="btn" href="../../index.html">Sign Out</a>
-        <a class="profile-pic" href="/src/homepage/homepage.html"><img src="/images/profile-pic.png"></a>
+        <a class="btn1" href="/src/scoreboard/scoreboard.html">Leaderboard</a>
+        <a class="btn" href="/index.html">Sign Out</a>
+        <a class="profile-pic" href="/src/profile/profile.html"><img src="/images/profile-pic.png"></a>
       </div>
     </nav>
   </header>
